wordpress/wordpress-service.yml
#apiVersion: v1
#kind: Service
#metadata:
#  name: wordpress-service
#spec:
#  ports:
#  - port: 31001
#    nodePort: 31001
#    targetPort: http-port
#    protocol: TCP
#  selector:
#    app: wordpress
#  type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: wordpress
